--- a/style.css
+++ b/style.css
@@ -114,39 +114,81 @@ div#buttons > a:hover{
 }
 
 /*--- Media Queries --*/
-@media screen and (max-width: 900px) {
-	.content{
-		padding-bottom: 30%;
+@media screen and (max-width: 1024px) {
+
+	.borderContent h1{
+		font-family: 'Poiret One', serif;
+		font-size: 400%;
+		font-weight: 600;
+		align-self: center;
+		text-shadow:3px 2px 5px #979FA4;
+		color: #133B50;
+		padding-top: 2%;
 	}
-	.content h1{
-		font-size: 450%;
+	.borderContent h1{
+		border-bottom: 1px solid black;
+		border-color: #133B50;
+		margin-left:15%;
+		margin-right: 15%;
 	}
-	.button{
-		font-size: 110%;
-		padding: 9px 17px;
+	.intro .content2 {
+		display: table-cell;
+		vertical-align: middle;
+		width: 100%;
+		max-width: none;
+		position: absolute;
+	}
+	div#description{
+		text-align: center;
+		padding-top: 17%;
+		font-family: 'Poiret One', serif;
+		font-size: 100%;
+		font-weight: 600;
+	}
+	.intro .inner2{
+		display: table-cell;
+		vertical-align: top;
+		width: 100%;
+		max-width: none;
+		position: fixed;
+	}
+	div#menubar1{
+		padding: 1%;
+		vertical-align: top;
+		text-align: right;
+	}
+	div#menubar1 > a{
+		font-family: 'Indie Flower', sans-serif;
+		font-size: 90%;
+		font-weight: 700;
+		padding: 5px 10px;
+		color: #000;
+		margin-right: 0%;
+		text-decoration: none;
+		border-radius: 10%;
+		transition: background 0.3s linear 0s, color 0.3s linear 0s;
+	}
+	div#menubar1 > a:hover{
+		background: #32596F;
+		color: #E4DED5;
+	}
+
+	.intro .inner3{
+		display: table-cell;
+		vertical-align: middle;
+		width: 100%;
+		max-width: none;
+		padding-bottom: 20%;
+	}
+	div#buttons{
+		vertical-align: middle;
+		text-align: center;
+	}
+	div#buttons > a{
+		padding: 2% 2%;
 	}
 }
 @media screen and (max-width: 768px) {
-	.content{
-		padding-bottom: 40%;
-	}
-	.content h1{
-		font-size: 300%;
-	}
-	.button{
-		font-size: 110%;
-		padding: 9px 17px;
-	}
 }
 @media screen and (max-width: 480px) {
-	.content{
-		padding-bottom: 50%;
-	}
-	.content h1{
-		font-size: 250%;
-	}
-	.button{
-		font-size: 100%;
-		padding: 6px 14px;
-	}
 }
